# quantum_convolutional_neural_network

./: .gitignore  README.md  pyproject.toml
configs/: example.yaml  ibm_account.yaml
models/: example_qnn.model
notebooks/: qiskit_qcnn_example.ipynb  qiskit_qnn_example.ipynb
scripts/: run_estimator_qnn.py  run_example_estimator_qnn.py  run_example_exact_aer_estimator_qnn.py  run_example_exact_aer_sampler_qnn.py  run_example_noisy_aer_estimator_qnn.py  run_example_noisy_aer_sampler_qnn.py  run_example_sampler_qnn.py  train_qnn_with_example_dataset.py  try_different_optimisers.py
src/: base_quant_layer.py  example_qcnn.py  line_dataset.py  line_dataset_generator.py  qnn_builder.py  qnn_trainer.py  quant_conv_layer.py  quant_pool_layer.py  training.py  utils.py
tests/: test_example_qcnn.py  test_line_dataset.py  test_line_dataset_generator.py  test_qnn_builder.py  test_qnn_trainer.py  test_quant_conv_layer.py  test_quant_pool_layer.py  test_utils.py
