[tool.poetry]
name = "quantum-convolutional-neural-network"
version = "0.1.0"
description = "One implementation of Quantum Convolutional Neural Network"
authors = ["ksk0629 <neko.to.tomodachi.muse@gmail.com>"]
license = "MIT"
readme = "README.md"
# packages = [{include = "src/example_package"}]
repository = "https://github.com/ksk0629/quantum_convolutional_neural_networl"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.12"
qiskit-aer = "^0.15.1"

[tool.poetry.scripts]
# run_example = "src.example_package.example:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
sphinx = "^8.0.2"
jupyter = "^1.1.1"
notebook = "^7.2.2"
qiskit = "^1.2.2"
qiskit-machine-learning = {extras = ["torch"], version = "^0.7.2"}
torch = "^2.4.1"
matplotlib = "^3.9.2"
pylatexenc = "^2.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
markers = [
    # "add_number: marks tests for add_number function",
    # "example_class: marks tests for ExmapleClass Class"
]